# cs3650-final-project

./: .gitignore  README.md  cat_data.json  fileIO.py  music.py  p2p.py  packets.py  peer.py  pyproject.toml
other medium demo/: main.py  p2p.py  peer.py
p2p/: catapi.py  p2p.py  packets.py  peer.py  relay.py
server_client/: client.py  constants.py  server.py
